--- a/index.Rmd
+++ b/index.Rmd
@@ -25,11 +25,10 @@ pal <- brewer.pal(6, 'Pastel1')
 
 # Course Supervisors Contact Information  {.tabset .tabset-fade}
 Your primary contact in STAT 216 is your instructor. If you have
-concerns that cannot be answered by your instructor, you may reach
-out to the Student Success Coordinator or the Course Supervisor.
+concerns that cannot be answered by your instructor, or have exam conflicts, you may reach
+out to the Student Success Coordinators or the Course Supervisor.
 
-Refer to your section's **Instructor Contact Information under Canvas Modules --> Section X** for your
-instructor and co-instructor/TA contact information.
+Refer to your section's **Instructor Contact Information under Canvas Modules --> Section X Information and Notes** for your instructor and co-instructor/TA contact information and office hours.
 
 ## Student Success Coordinator
 [**Jade Schmidt**](http://www.math.montana.edu/directory/faculty/1524571/jade-schmidt){target="_blank"}  
@@ -54,8 +53,8 @@ Phone: (406) 994-1962
 
 ---
 
-# Instructor contact information  {.tabset .tabset-fade}
-Your primary contact in STAT 216 is your instructor. 
+# Instructor Contact Information  {.tabset .tabset-fade}
+Your primary contact in STAT 216 is your section instructor. Please contact your instructor for absences or other day-to-day questions.
 
 ---
 
