--- a/index.tex
+++ b/index.tex
@@ -538,9 +538,9 @@ first day of the new module.
 \subsubsection{Engagement (10\%)}\label{engagement-10}
 
 Every class day, you will meet with your classmates and instructor team
-to work through that day's coursepack group activity. Attendance and
-completion of the in-class activities and exit tickets (reviewing select
-questions from the activity) counts towards this portion of your grade.
+to work through that day's coursepack group activity. Exit tickets
+(reviewing select questions from the activity) grades make up this
+portion of your grade.
 
 \begin{itemize}
 \tightlist
@@ -551,13 +551,10 @@ questions from the activity) counts towards this portion of your grade.
   will provide you with a PDF copy of the coursepack.}
 \item
   As a group, you will submit an `exit ticket' (answers to select
-  questions from the activity) to \textbf{Gradescope at the end of each
-  class period}.
+  question(s) from the activity) to \textbf{Gradescope at the end of
+  each class period}.
 \item
-  Activities will be checked for completion at the \textbf{beginning of
-  the following class period}.
-\item
-  Policy for missed activities:
+  Policy for missed activities/exit tickets:
 
   \begin{itemize}
   \tightlist
@@ -565,9 +562,9 @@ questions from the activity) counts towards this portion of your grade.
     We will not record or post lectures/asynchronous learning
     opportunities.
   \item
-    Students get a ``free pass'' for up to three activities per Unit, no
-    questions asked, \emph{but students are expected to communicate any
-    absences with their section instructor}.
+    Students get a ``free pass'' for up to three activities/exit tickets
+    per Unit, no questions asked, \emph{but students are expected to
+    communicate any absences with their section instructor}.
     Illnesses/emergencies/school-related absences are included in these
     three; if students have extraneous circumstances, they are
     encouraged to talk to their instructor.
