--- a/index.Rmd
+++ b/index.Rmd
@@ -360,7 +360,7 @@ Group final exam will be **Wednesday December 3rd and Friday December 5th (durin
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **TBD**. 
+Individual common hour final exam will be **Thursday, December 11th from 10:00 - 11:50 am**. 
 
 * The individual portion of the final exam will be worth 80% of your final exam grade.
 * No potential final exam questions will be released.
